@@ -78,19 +78,6 @@ kotlin {
             implementation(libs.ktmidi.jvm.desktop)
             implementation(libs.coremidi4j)
             implementation(libs.flatlaf)
-
-            val lwjglVersion = "3.3.3"
-            val lwjglPlatforms = listOf("natives-windows", "natives-linux", "natives-macos", "natives-macos-arm64")
-
-            implementation("org.lwjgl:lwjgl:$lwjglVersion")
-            implementation("org.lwjgl:lwjgl-openal:$lwjglVersion")
-            implementation("org.lwjgl:lwjgl-stb:$lwjglVersion")
-
-            lwjglPlatforms.forEach { platform ->
-                runtimeOnly("org.lwjgl:lwjgl:$lwjglVersion:$platform")
-                runtimeOnly("org.lwjgl:lwjgl-openal:$lwjglVersion:$platform")
-                runtimeOnly("org.lwjgl:lwjgl-stb:$lwjglVersion:$platform")
-            }
         }
     }
 }
@@ -129,19 +116,6 @@ dependencies {
 compose.desktop {
     application {
         mainClass = "dev.anthonyhfm.amethyst.MainKt"
-
-        jvmArgs += listOf(
-            "--add-opens=java.base/java.nio=ALL-UNNAMED",
-            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-            "--add-opens=java.base/java.lang=ALL-UNNAMED",
-            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-            "--add-opens=java.base/java.util=ALL-UNNAMED",
-            "--add-opens=java.base/sun.misc=ALL-UNNAMED",
-            "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
-            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-            "--add-exports=java.base/sun.misc=ALL-UNNAMED",
-            "-Djava.library.path=."
-        )
 
         nativeDistributions {
             packageName = "Amethyst"
